fixed z-index

--- a/sass/core.scss
+++ b/sass/core.scss
@@ -1380,7 +1380,7 @@
 .yotpo {
   .yotpo-modal{
     position: fixed;
-    z-index: 800;
+    z-index: 10000;
     left: 0;
     top: 0;
     width: 100%;
